--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
-    "server" : "nodemon server.js"
+    "server" : "nodemon server/server.js"
   },
   "eslintConfig": {
     "extends": [
