--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
-    "server" : "nodemon server/server.js"
+    "server": "nodemon server/server.js"
   },
   "eslintConfig": {
     "extends": [
