--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "story-town",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
   "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -13,7 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "victory": "^36.2.0",
     "web-vitals": "^1.1.2"
   },
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
-    "server": "nodemon server/server.js"
+    "server": "node server/server.js"
   },
   "eslintConfig": {
     "extends": [
